Added basic localization features

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
 Options +FollowSymlinks
 RewriteEngine on
-RewriteCond %{REQUEST_URI} !^/(public)/
+#RewriteCond %{REQUEST_URI} !^/(public)/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule ([^/]+)/([^/]+) index.php?controller=$1&action=$2 [NC]
+#RewriteRule ([^/]+)/([^/]+) index.php?controller=$1&action=$2 [NC,L]
+RewriteRule ^(.+)$ index.php?path=$1 [NC,L]
 #RewriteRule .* index.php [L]
